# auik

./: .gitmodules  CMakeLists.txt  README.MD  setup.sh
include/auik/: widget.hpp
include/auik/button/: button.hpp  checkbox.hpp  collapse_header.hpp  combobox.hpp  group.hpp  switch.hpp
include/auik/dock/: space.hpp  types.hpp
include/auik/icon/: icon.hpp
include/auik/image/: image.hpp
include/auik/input/: slider.hpp
include/auik/integration/: imgui.hpp  window.hpp
include/auik/menu/: menu.hpp
include/auik/modal/: modal.hpp
include/auik/search/: searchbox.hpp
include/auik/selectable/: selectable.hpp
include/auik/tab/: tab.hpp
include/auik/text/: text.hpp
include/auik/titlebar/: titlebar.hpp  titlebar_win32.hpp
include/auik/v2/: auik.hpp  draw.hpp  pipelines.hpp  scrollbar.hpp  text_button.hpp  theme.hpp  widget.hpp  window.hpp
include/auik/v2/backends/: agrb.hpp
include/auik/v2/backends/agrb/: adapter.hpp  agrb.hpp  quads_pipeline.hpp
include/auik/v2/backends/awin/: awin.hpp
include/auik/v2/detail/: context.hpp  events.hpp  fwd.hpp  gpu_context.hpp  gpu_dispatch.hpp  quads_dispatch.hpp
include/auik/v2/pipelines/: quads.hpp  textures.hpp
include/auik/window/: window.hpp
include/uikit/: style.hpp  utils.hpp  widget.hpp  window@imgui.hpp  window_imgui.hpp
include/uikit/button/: button.hpp  checkbox.hpp  collapse_header.hpp  combobox.hpp  group.hpp  switch.hpp
include/uikit/combobox/: combobox.hpp
include/uikit/dock/: dockspace.hpp  space.hpp  types.hpp
include/uikit/icon/: icon.hpp
include/uikit/image/: image.hpp
include/uikit/input/: slider.hpp
include/uikit/integration/: imgui.hpp  window.hpp
include/uikit/menu/: menu.hpp
include/uikit/modal/: modal.hpp
include/uikit/search/: searchbox.hpp
include/uikit/selectable/: selectable.hpp
include/uikit/tab/: tab.hpp
include/uikit/text/: text.hpp
include/uikit/titlebar/: titlebar@win32.hpp  titlebar_win32.hpp
include/uikit/window/: window.hpp
src/: main.cpp  style.cpp  utils.cpp  widget.cpp  window@imgui.cpp  window_imgui.cpp
src/button/: button.cpp  checkbox.cpp  collapse_header.cpp  combobox.cpp  group.cpp  switch.cpp
src/combobox/: combobox.cpp
src/dock/: dockspace.cpp  space.cpp
src/icon/: icon.cpp
src/image/: image.cpp
src/input/: slider.cpp
src/integration/: window.cpp
src/menu/: menu.cpp
src/modal/: modal.cpp
src/search/: searchbox.cpp
src/selectable/: selectable.cpp
src/tab/: tab.cpp
src/text/: text.cpp
src/titlebar/: __os_win32_titlebar.cpp  titlebar.cpp  titlebar@win32.cpp  titlebar_win32.cpp
src/v2/: theme.cpp
src/v2/backends/: agrb.cpp
src/v2/pipelines/: quads.cpp  quads_stream.hpp
src_v2/: CMakeLists.txt
src_v2/backends/agrb/: CMakeLists.txt  agrb.cpp  context.hpp  env.yaml  shaders.yaml
src_v2/backends/agrb/picker/: picker.cpp  picker.frag  picker.hpp  picker.vert
src_v2/backends/agrb/quads/: quads.cpp  quads.frag  quads.vert
src_v2/backends/awin/: CMakeLists.txt  awin.cpp
src_v2/core/: auik.cpp  theme.cpp
src_v2/core/pipelines/: quads.cpp  stream_data.hpp
src_v2/widgets/: scrollbar.cpp  text_button.cpp  window.cpp
